# materialxWeb

./: .gitignore  README.html  README.md
.github/workflows/: static.yml
documents/: Doxyfile  doxygen_warnings.txt  footer.html  header.html
documents/html/: ____pip-runner_____8py_source.html  __abc_8py_source.html  __abnf_8py_source.html  __base_8py_source.html  __bidict_8py_source.html  __cmd_8py_source.html  __connection_8py_source.html  __dists_8py_source.html  __distutils_8py_source.html  __distutils__hack_2____init_____8py_source.html  __dup_8py_source.html  __envs_8py_source.html  __events_8py_source.html  __exc_8py_source.html  __frozen_8py_source.html  __headers_8py_source.html  __identifier_8py_source.html  __internal_2cache_8py_source.html  __internal_2cli_2status__codes_8py_source.html  __internal_2commands_2cache_8py_source.html  __internal_2commands_2help_8py_source.html  __internal_2commands_2index_8py_source.html  __internal_2models_2index_8py_source.html  __internal_2network_2cache_8py_source.html  __internal_2utils_2compat_8py_source.html  __internal_2utils_2retry_8py_source.html  __iter_8py_source.html  __jaraco__text_8py_source.html  __native_8py_source.html  __orderedbase_8py_source.html  __orderedbidict_8py_source.html  __readers_8py_source.html  __receivebuffer_8py_source.html  __speedups_8c_source.html  __state_8py_source.html  __sysconfig_8py_source.html  __termui__impl_8py_source.html  __textwrap_8py_source.html  __typing_8py_source.html  __util_8py_source.html  (+692 more)
documents/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  (+71 more)
flask/converters/: MaterialXConversionApp.py  README.md  pyproject.toml  usdmtlx.py
flask/converters/static/js/: MaterialXConversionApp.js  WebSocketClient.js
flask/converters/templates/: MaterialXConversionApp.html
flask/gpuopen/: MaterialXGPUOpenApp.py  README.md  pyproject.toml
flask/gpuopen/static/css/: style.css
flask/gpuopen/static/js/: MaterialXGPUOpenClient.js  WebSocketClient.js
flask/gpuopen/templates/: MaterialXGPUOpenApp.html
flask/ocio/: README.md  materialx_ocio_app.py  pyproject.toml
flask/ocio/static/js/: materialx_ocio_app.js
flask/ocio/templates/: materialx_ocio_app.html
flask/template/: README.md  __PYTHON_APP__.py  pyproject.toml  template_flask_app.py
flask/template/static/js/: __PYTHON_APP__.js  template_flask_app.js
flask/template/templates/: __PYTHON_APP__.html  template_flask_app.html
nodejs/materialxLibraryInspector/: JsAmbientCGLoader.js  JsGPUOpenMaterialLoader.js  README.html  README.md  README.md.orig  README_dox.md  ambientcg_materials.json  gpuopen_previews.json  materialServer.cjs  package-lock.json  package.json
nodejs/materialxLibraryInspector/public/: index.html  main.js
utilities/: README.html  README.md  build_all.sh  build_docs.sh  build_flask.sh  build_nodejs.sh  footer.html  mdhtml.py  mermaid_prep.py  template.html
