[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_flask_app"
version = "0.0.1"
description = "__PYTHON_PROJECT_DESCRIPTION__"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "__PYTHON_PROJECT_AUTHOR_NAME__", email = "author@gmail.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flask>=2.3.2",
    "flask-socketio>=5.3.4",
    "argparse>=1.4.0"
    # "__PYTHON_PROJECT_PACKAGE_DEPENDENCIES__", Add other dependencies here...
]

[project.scripts]
template_flask_app = "template_flask_app:main"

[tool.setuptools.packages.find]
where = ["."] 

[tool.setuptools.package-data]
"template_flask_app" = [
    "data/*",
    "static/css/*",
    "static/js/*",
    "templates/*",
]

[project.urls]
"Homepage" = "__PYTHON_PROJECT_HOME_PAGE__"
"Issues" = "__PYTHON_PROJECT_HOME_PAGE__/issues"
"Source Code" = "__PYTHON_PROJECT_HOME_PAGE__"
"Documentation" = "__PYTHON_PROJECT_HOME_PAGE__"
